welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:36: error: not found: type blue
  fleur(Color:blue);
              ^FlowerCase:36: error: object java.awt.Color is not a value
  fleur(Color:blue);
        ^